--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-spinners": "^0.17.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
+    "use-debounce": "^10.0.5",
     "zod": "^3.25.48",
     "zustand": "^5.0.5"
   },
