--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-spinners": "^0.17.0",
+    "recharts": "^3.0.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
+    "ua-parser-js": "^2.0.4",
     "use-debounce": "^10.0.5",
     "zod": "^3.25.48",
     "zustand": "^5.0.5"
