--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "boring-avatars": "^1.11.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3-scale": "^4.0.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
