--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "d3-scale": "^4.0.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
+    "motion": "^12.23.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
