--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.9",
     "@tanstack/react-table": "^8.21.3",
+    "better-auth": "^1.3.4",
     "boring-avatars": "^1.11.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -44,6 +45,7 @@
     "react-simple-maps": "^3.0.0",
     "react-spinners": "^0.17.0",
     "recharts": "^3.0.2",
+    "resend": "^4.7.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "ua-parser-js": "^2.0.4",
