--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,14 @@ NEXT_PUBLIC_BASE_URL=
 WORKER_ID=
 
 DATABASE_URL=
-DATABASE_DIRECT_URL=
 
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+RESEND_API_KEY=
