--- a/package.json
+++ b/package.json
@@ -24,16 +24,13 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.49.9",
     "@tanstack/react-table": "^8.21.3",
+    "better-auth": "^1.3.4",
     "boring-avatars": "^1.11.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "country-flag-icons": "^1.5.19",
     "d3-scale": "^4.0.2",
     "date-fns": "^4.1.0",
-    "flake-idgen": "^1.4.0",
     "lucide-react": "^0.511.0",
     "motion": "^12.23.0",
     "next": "15.3.3",
@@ -44,6 +41,7 @@
     "react-simple-maps": "^3.0.0",
     "react-spinners": "^0.17.0",
     "recharts": "^3.0.2",
+    "resend": "^4.7.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "ua-parser-js": "^2.0.4",
@@ -53,8 +51,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@iconify/react": "^6.0.0",
     "@tailwindcss/postcss": "^4",
-    "@types/flake-idgen": "^0.1.34",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
