--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "url-shortener",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@9.15.0",
   "scripts": {
     "dev": "next dev",
     "postinstall": "prisma generate",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "email dev --dir src/components/email --port 4000",
+    "studio": "prisma studio"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -24,6 +27,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^0.3.2",
     "@tanstack/react-table": "^8.21.3",
     "better-auth": "^1.3.4",
     "boring-avatars": "^1.11.2",
@@ -37,6 +41,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^4.2.5",
     "react-hook-form": "^7.57.0",
     "react-simple-maps": "^3.0.0",
     "react-spinners": "^0.17.0",
@@ -52,6 +57,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@iconify/react": "^6.0.0",
+    "@react-email/preview-server": "4.2.5",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
